chapter-2 kubernetes-basics/exercise-1.1/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: 
      - name: shared-storage
        emptyDir: {}
      containers:
        - name: writer
          image: hugonaing/log-writer:v1
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-storage
              mountPath: /usr/src/app/files

        - name: reader
          image: hugonaing/log-reader:v2.1
          imagePullPolicy: Always
          volumeMounts: 
            - name: shared-storage
              mountPath: /usr/src/app/files
          ports: 
            - containerPort: 3000
