chapter-2 kubernetes-basics/exercise-1.1/log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: http
      port: 8080           # Ingress က လှမ်းခေါ်မည့် Service Port
      targetPort: 3000
