chapter-2 kubernetes-basics/exercise-1.1/log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: exercises
spec:
  ingressClassName: nginx   # Docker Desktop ရှိ NGINX Ingress Controller အတွက်
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8080

          - path: /pingpong
            pathType: Prefix
            backend: 
              service: 
                name: pingpong-svc
                port: 
                  number: 8080
